fixed problem with adding gifs and it being covered by the footer or anyother area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ nav{
     
 }
 .contentbody{
-    height:100vh;
+    height: auto;
 }
 
 .header {
